# py-videocore7

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: pctr_gpu_clock.py  scopy.py  sgemm.py
src/_videocore7/: assembler.py  driver.py  drm_v3d.py  readwrite4.c  util.py  v3d.py
src/_videocore7/readwrite4/: __init__.pyi  module.c
src/py_videocore7/: __init__.py
src/videocore7/: __init__.py
src/videocore7/assembler/: __init__.py  __init__.pyi
src/videocore7/driver/: __init__.py
src/videocore7/v3d/: __init__.py
tests/: test_alu.py  test_branch.py  test_condition_codes.py  test_driver.py  test_drm.py  test_guard.py  test_labels.py  test_parallel.py  test_raw.py  test_registers.py  test_signals.py  test_tmu.py  test_unifa.py  test_v3d.py
